# Magnate

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile  countLines.sh  dependencies.dot  genDependencies.sh  todo.txt  todolist.txt
assets/: .swp  buildMainAtlas.sh
assets/main/: A.xcf  B.xcf  C.xcf  D.xcf  E.xcf  F.xcf  G.xcf  H.xcf  I.xcf  J.xcf  K.xcf  L.xcf  M.xcf  N.xcf  O.xcf  P.xcf  Q.xcf  R.xcf  S.xcf  T.xcf  U.xcf  V.xcf  W.xcf  X.xcf  Y.xcf  Z.xcf  _a.xcf  _b.xcf  _c.xcf  _d.xcf  _e.xcf  _f.xcf  _g.xcf  _h.xcf  _i.xcf  _j.xcf  _k.xcf  _l.xcf  _m.xcf  _n.xcf  (+71 more)
assets/terrain/: grass.xcf  mountains.xcf  sand.xcf  water.xcf
data/: main_tiles.txt  makeGlyphs.sh  ui.txt
data/ui/: mainMenu.txt  saveMenu.txt
include/: .Building.h.swp  .Camera.h.swp  .Draggable.h.swp  .Erosion.h.swp  .GUI.h.swp  .ImmediateDraw.h.swp  .Mesh.h.swp  .Renderer.h.swp  .Shaders.h.swp  .TriMesh.h.swp  .VBO.h.swp  .Watershed.h.swp  .Window.h.swp  .World.h.swp  .WorldRenderer.h.swp  Atlas.h  Broadcaster.h  Building.h  Button.h  Camera.h  Chunk.h  Component.h  Constants.h  Control.h  Coord.h  Cuboid.h  DebugTools.h  Draggable.h  Erosion.h  Field.h  FileIO.h  GUI.h  Game.h  GenTypes.h  Geom2D.h  GlmHeaders.h  GlobalConfig.h  Heightmap.h  ImmediateDraw.h  Input.h  (+33 more)
macBuild/: CMakeCache.txt  cmake_install.cmake
macBuild/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
macBuild/Magnate.build/Debug/ALL_BUILD.build/: Script-5406024B000245F0A8040103.sh  dgph
macBuild/Magnate.build/Debug/Magnate.build/: dgph
macBuild/Magnate.build/Debug/Magnate.build/Objects-normal/x86_64/: Atlas.d  Button.d  Button.dia  Magnate.LinkFileList
macBuild/Magnate.build/Debug/ZERO_CHECK.build/: Script-C66902D859DD4EA3A3BA3A3F.sh  dgph
macBuild/Magnate.xcodeproj/: project.pbxproj
macBuild/Magnate.xcodeproj/project.xcworkspace/xcuserdata/Brian.xcuserdatad/: UserInterfaceState.xcuserstate
macBuild/Magnate.xcodeproj/xcuserdata/Brian.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  Magnate.xcscheme  ZERO_CHECK.xcscheme  xcschememanagement.plist
misc/: Altitude distribution.gcx
models/: #sphereTank.wings#  auvBG.xcf  model_list.txt  sphereTank.mtl  sphereTank.wings  tankTex.xcf  tankcar.wings
saves/: asdf.mag  shouldn't see.sh
src/: .cproject  .project  Atlas.cpp  Atlas.h  Building.cpp  Building.h  Button.cpp  Button.h  Camera.cpp  Chunk.cpp  Chunk.h  Component.cpp  Component.h  Constants.cpp  Constants.h  Control.cpp  Control.h  Coord.cpp  Coord.h  Cuboid.cpp  Cuboid.h  DebugTools.cpp  DirManager.cpp  DirManager.h  Draggable.cpp  Erosion.cpp  Field.cpp  Field.h  FileIO.cpp  GUI.cpp  Game.cpp  GenTypes.cpp  Geom2D.cpp  GlmHeaders.cpp  GlobalConfig.cpp  Heightmap.cpp  ImmediateDraw.cpp  Input.cpp  Label.cpp  Label.h  (+38 more)
src/Release/: makefile  subdir.mk
xcodeBuild/: CMakeCache.txt  cmake_install.cmake  configure.sh
xcodeBuild/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
xcodeBuild/Debug/: Magnate
xcodeBuild/Magnate.build/Debug/ALL_BUILD.build/: Script-AEBA6EB1BB6F4850BD71E322.sh  dgph
xcodeBuild/Magnate.build/Debug/Magnate.build/: dgph
xcodeBuild/Magnate.build/Debug/Magnate.build/Objects-normal/x86_64/: Building.d  Camera.d  Camera.dia  Draggable.d  Erosion.d  FileIO.d  GUI.d  Game.d  GenTypes.d  GlmHeaders.d  GlobalConfig.d  Heightmap.d  ImmediateDraw.d  Input.d  Label.d  LinAlg.d  Magnate.LinkFileList  Menus.d  Mesh.d  Mesh.dia  Minimap.d  Models.d  MultiSelect.d  RandomUtils.d  Renderer.d  SaveManager.d  Scene.d  ScrollBlock.d  Shaders.d  Terrain.d  TerrainGen.d  TexGen.d  TexManager.d  Topo.d  UIRenderer.d  VBO.d  Watershed.d  Window.d  World.d  WorldRenderer.d  (+1 more)
xcodeBuild/Magnate.build/Debug/ZERO_CHECK.build/: Script-7129F9F925F64DF4B26AC7CB.sh  dgph
xcodeBuild/Magnate.build/Release/Magnate.build/: dgph
xcodeBuild/Magnate.build/Release/Magnate.build/Objects-normal/x86_64/: Atlas.d  Button.d  Component.d  Coord.d  Field.d  Magnate.LinkFileList
xcodeBuild/Magnate.build/Release/ZERO_CHECK.build/: dgph
xcodeBuild/Magnate.xcodeproj/: project.pbxproj
xcodeBuild/Magnate.xcodeproj/project.xcworkspace/xcuserdata/Brian.xcuserdatad/: UserInterfaceState.xcuserstate
xcodeBuild/Magnate.xcodeproj/xcuserdata/Brian.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  Magnate.xcscheme  ZERO_CHECK.xcscheme  xcschememanagement.plist
